log
Sat, May 17, 2025  4:47:33 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sat, May 17, 2025  5:00:30 PM: 
 sudoku.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
 tests:  3|4
total_score: 20/70
e3f9b85
Sat, May 17, 2025  5:01:24 PM: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
c2d9d07
Sat, May 17, 2025  5:09:32 PM: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:98:34: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
               for (k = 1; k <= 9 , k++) {
                                  ^
sudoku.c:98:39: error: expected ';' before ')' token
               for (k = 1; k <= 9 , k++) {
                                       ^
cc1.exe: all warnings being treated as errors
59026ce
Sat, May 17, 2025  5:09:42 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
ddaa531
Sat, May 17, 2025  5:14:17 PM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  6|2
total_score: 45/70
bd80f51
Sat, May 17, 2025  5:14:40 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
e533533
Sat, May 17, 2025  5:15:01 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
13c95bf
